<resources>
    <string name="app_name">惠州学院校园巴士定位系统</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="identity">
        <item>司机注册</item>
        <item>学生注册</item>
    </string-array>

    <string-array name="sex">
        <item>未设置</item>
        <item>男</item>
        <item>女</item>
    </string-array>

    <string name="main">主页</string>
    <string name="mine">我的</string>
    <string name="forum">动态</string>
    <string name="welcome_login">欢迎登陆校巴平台</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="welcome_register">欢迎注册校巴平台</string>
    <string name="username_edittext">请输入手机</string>
    <string name="password_edittext">请输入密码</string>
    <string name="confirm_password_edittext">请确认密码</string>
    <string name="logout">登出</string>
    <string name="driver">司机登录？</string>
    <string name="userInfo">个人信息</string>
    <string name="tips">点击此处可以更换头像</string>
    <string name="submit">确认</string>
    <string name="cancel">取消</string>
    <string name="update">发布动态</string>
</resources>