<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.google.android.ui.main.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.google.android.ui.mine.MineFragment"
        android:label="@string/mine"
        tools:layout="@layout/fragment_mine" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.google.android.ui.forum.ForumFragment"
        android:label="@string/forum"
        tools:layout="@layout/fragment_forum" />
</navigation>