<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login"
        android:textSize="32sp"
        android:textColor="@color/green"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone"
            android:background="@drawable/style_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_mine"
            android:hint="@string/username_edittext"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:background="@drawable/style_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password_edittext"
            android:inputType="textPassword"/>

        <Switch
            android:id="@+id/isDriver"
            android:text="@string/driver"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@drawable/style_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@+id/agreement"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

    <CheckBox
        android:id="@+id/agreement"
        android:text="请同意《用户协议》"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"/>
</RelativeLayout>