<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/back"
            android:src="@drawable/ps_ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

        <TextView
            android:text="修改个人信息"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/headChange"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/style_edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp">

        <com.google.android.widget.CircleImageView
            android:id="@+id/head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_mine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:text="@string/tips"
            android:textColor="@color/gray"
            android:textSize="24sp"
            app:drawableEndCompat="@drawable/ic_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@color/black" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/changeUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_edittext"
        android:gravity="center_vertical"
        android:hint="这里输入要修改的昵称"
        android:textSize="22sp"
        android:layout_marginHorizontal="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp">

        <Spinner
            android:id="@+id/changeSex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/style_edittext"
            android:entries="@array/sex" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/changeAge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/style_edittext"
            android:gravity="center_vertical"
            android:hint="这里输入年龄"
            android:inputType="number"
            android:textSize="22sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/myCar"
        android:text="我的车辆信息"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/style_edittext"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/style_button_white"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:layout_marginEnd="20dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/style_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</LinearLayout>