<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mine.MineFragment">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/mine_blur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/mine_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mine_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_settings" />

    </RelativeLayout>

    <Button
        android:id="@+id/userInfo"
        android:text="@string/userInfo"
        android:textSize="22sp"
        android:textColor="@color/green"
        android:gravity="start|center_vertical"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_info"
        android:drawableEnd="@drawable/ic_right"
        android:layout_below="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/style_button_white" />

    <Button
        android:id="@+id/button_2"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textColor="@color/green"
        android:gravity="start|center_vertical"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_mine"
        android:layout_below="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/style_button_white" />

    <Button
        android:id="@+id/button_3"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textColor="@color/green"
        android:gravity="start|center_vertical"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_mine"
        android:layout_below="@+id/button_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/style_button_white" />

    <Button
        android:id="@+id/logout"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/style_button"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>